Fixed issue where impaling wound modifiers were set too low. Corrected issue with how Move and Attack's modifier and cap were getting set.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -21,7 +21,7 @@
 
 #sheet {
 	display: grid;
-	grid-template-rows: 120px 0fr 0fr auto auto;
+	grid-template-rows: 120px 0fr 0fr 0fr;
 }
 
 #personal {
